# purplemcp-lab

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  ETHICS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: ci.yml.disabled
attacks/: README.md
attacks/01_tool_poisoning/: README.md  exploit.py  vulnerable_server.py
attacks/02_indirect_prompt_injection/: README.md  exploit.py  vulnerable_server.py
attacks/03_command_injection/: README.md  exploit.py  vulnerable_server.py
attacks/04_path_traversal/: README.md  exploit.py  vulnerable_server.py
attacks/05_ssrf/: README.md  exploit.py  vulnerable_server.py
attacks/06_token_theft/: README.md  exploit.py  vulnerable_server.py
attacks/07_rug_pull/: README.md  exploit.py  vulnerable_server.py
attacks/_lab/: runner.py  (+3 more)
defense/: README.md  checklist.md  compare.py
docs/: 01-what-is-mcp.md  02-architecture.md  03-installing-models.md  04-attack-catalog.md  05-defense-playbook.md  06-gui.md  07-research-methodology.md  MCP-SECURITY-GUIDE.md  SECURITY-REPORT.md  TAXONOMY.md
purplemcp/: __init__.py  benchmark.py  cli.py  config.py  environment.py  report.py  scanner.py  taxonomy.py  viewer.py
results/: README.md  guardrail-benchmark.json  guardrail-benchmark.md
scripts/: gen_screenshots.py  gen_taxonomy.py
servers/: README.md
tests/: test_agent_loop.py  test_cli.py  test_crypto.py  test_environment.py  test_guardrails.py  test_gui.py  test_policy.py  test_probes.py  test_providers.py  test_report.py  test_research.py  test_scanner.py  test_taxonomy.py  test_terminal.py
(+189 files in other folders)
